Added new logo, made table buttons content-aware