@@ -2,6 +2,8 @@ package org.elektronetf.ttt.gui;
 
 import java.awt.BorderLayout;
 import java.awt.CardLayout;
+import java.awt.Component;
+import java.awt.GridLayout;
 import java.util.List;
 import java.util.Vector;
 
@@ -9,18 +11,19 @@ import javax.swing.DefaultComboBoxModel;
 import javax.swing.InputVerifier;
 import javax.swing.JComboBox;
 import javax.swing.JComponent;
+import javax.swing.JLabel;
 import javax.swing.JPanel;
 import javax.swing.JTextField;
 
 import org.elektronetf.ttt.Match;
 
-public class MatchPanel extends JPanel { // TODO SUCKS ASS
+public class MatchPanel extends JPanel { // TODO Fix & finish matches panel
 	public MatchPanel() {
 		super(new BorderLayout());
 		
 		comboBox = new JComboBox<>();
 		comboBox.setEditable(false);
-		comboBox.addItemListener((evt) -> ((CardLayout) cards.getLayout()).show(cards, (String) evt.getItem()));
+		comboBox.addItemListener((evt) -> ((CardLayout) cards.getLayout()).show(cards, evt.getItem().toString()));
 		add(comboBox, BorderLayout.PAGE_START);
 		
 		cards = new JPanel(new CardLayout());
@@ -29,20 +32,21 @@ public class MatchPanel extends JPanel { // TODO SUCKS ASS
 	
 	public void bindMatches(List<Match> matches) {
 		comboBox.setModel(new DefaultComboBoxModel<>(new Vector<>(matches)));
-		cards.removeAll();
-		for (Match match : matches) {
-			cards.add(new PointsPanel(match), match.toString());
+		if (matches != null) {
+			cards.removeAll();
+			for (Match match : matches) {
+				cards.add(new PointsPanel(match), match.toString()); 
+			}
 		}
 	}
 	
-//	public void submit() {
-//		int cardIndex 
-//		for (int i = 0; i < 3; i++) {
-//			match.setScore(i, points.get(i).get(0), points.get(i).get(1));
-//		}
-//		match.finish();
-//	}
-	
+	public void submit() {
+		for (Component comp : cards.getComponents()) {
+			if (comp instanceof PointsPanel) {
+				((PointsPanel) comp).submitPoints();
+			}
+		}
+	}
 
 	private JComboBox<Match> comboBox;
 	private JPanel cards;
@@ -51,7 +55,11 @@ public class MatchPanel extends JPanel { // TODO SUCKS ASS
 		private final Match match;
 		
 		public PointsPanel(Match match) {
+			super(new GridLayout(2, 4));
 			this.match = match;
+		}
+		
+		public void submitPoints() {
 			
 		}
 	}
@@ -73,7 +81,7 @@ public class MatchPanel extends JPanel { // TODO SUCKS ASS
 		}
 		
 		public int getPoints() {
-			return new Integer(getText());
+			return Integer.valueOf(getText());
 		}
 	}
 }
